    - Czech, by Miroslav Kure
    - Danish, by Morten Brix Pedersen
    - Dutch, by Bart Cornelis
    - French, by Denis Barbier
    - German, by Helge Kreutzmann
    - Polish, by Emilian Nowak
    - Turkish, by Erçin EKER
    - Ukrainian, by Eugeniy Meshcheryakov
    - Vietnamese, by Clytie Siddall
  * Update timezone data files to tzdata2006a.  (Closes: #345479, #347315, #351049)

  [ Clint Adams ]
  * Move to upstream version 2.3.6.
    - Redo debian/patches/localedata/cvs-localedata.diff
    - Remove glibc235-gcc4-cvs.diff
    - Remove glibc235-gcc4-jis0208.diff
    - Remove glibc235-binutils216-ia64.diff
    - Remove glibc235-gcc4-ia64-profile.diff
    - Remove glibc235-gcc4-ppc-procfs.diff
    - Remove glibc235-execvp-fix.diff
    - Delete CSD (Serbian Dinar) hunk from locale-iso4217.diff
    - Redo glibc235-dl-execstack.diff
    - Remove glibc235-alpha-divqu.diff
    - Remove amd64-semtrywait-weakalias.diff
    - Remove strfry-segv.diff
    - Remove ia64-binutils-libm.diff
    - Remove glibc235-leapsecond.diff
    - Delete several hunks from glibc235-gcc4-sparc-inline.diff
    - Remove hurd-libpthread-indirect-loading.diff
    - Remove glibc235-gcc4-hurd.diff
  * Acknowledge NMU.

 -- Clint Adams <schizo@debian.org>  Wed,  1 Feb 2006 20:52:13 -0500

glibc (2.3.5-12.1) unstable; urgency=low

  * NMU
  * glibc235-hppa-fpu.diff: New, fixes hppa FPU issues.  Closes: #342545

 -- LaMont Jones <lamont@bld-4.mmjgroup.com>  Wed,  1 Feb 2006 09:47:57 -0700

glibc (2.3.5-12) unstable; urgency=low

  * debian/patches/glibc235-nis-netgrp.diff: New file to fix assertion
    failures with NIS.  (Closes: #322011)
  * Switch to quilt to handle Debian patches.
    - debian/control.in/main: add Build-Depends: quilt.
    - Replace debian/rules.d/dpatch.mk by debian/rules.d/quilt.mk.
    - Rename debian/patches/*.dpatch into debian/patches/*.diff.
    - Move localedata patches into debian/patches/localedata/