@@ -60,6 +60,8 @@ glibc (2.3.6-1) UNRELEASED; urgency=low
     - Ukrainian, by Eugeniy Meshcheryakov
     - Vietnamese, by Clytie Siddall
   * Update timezone data files to tzdata2006a.  (Closes: #345479, #347315, #351049)
+  * debian/rules.d/control.mk: Make sure that debian/control is regenerated.
+    (Closes: #351704)
 
   [ Clint Adams ]
   * Move to upstream version 2.3.6.
